--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         <div class="row">
             <div class="col">
                 <h1>Price Area</h1>
+                <p>Neeeds to be done</p>
             </div>
         </div>
     </div>
