--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Music Theme</title>
+    <title>Kanakia Group</title>
     <!--<link rel="stylesheet" href="css/font-awesome.min.css">-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">Kanakia Group</a>
+                    <a href="#about" class="nav-link">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a href="#project" class="nav-link">Project</a>
@@ -33,15 +33,52 @@
                     <a href="#amenities" class="nav-link">Amenities</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#price" class="nav-link">Price</a>
+                    <a data-toggle="modal" data-target="#myModal" class="nav-link">Price</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="#contact" class="nav-link">88888888</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+
+<div class="container">
+    <!-- Button to Open the Modal -->
+    <!--<button type="button" class="btn btn-primary">-->
+        <!--Open modal-->
+    <!--</button>-->
+
+    <!-- The Modal -->
+    <div class="modal" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Modal Heading</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <form action="">
+                        <input type="text" placeholder="Enter your email">
+                        <button class="btn btn-success">Submit</button>
+                    </form>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div>
 
 <!--&lt;!&ndash; SHOWCASE &ndash;&gt;-->
 <!--<section id="showcase" class="py-5">-->
@@ -82,7 +119,7 @@
 <!--</section>-->
 
 <!-- BOXES -->
-<section id="about" class="py-5">
+<section id="about" class="py-5 bg-light">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -143,7 +180,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2>eing one of the premier hub of the city, Powai is close proximity with reputed schools, colleges, universities, parks, and hotels.</h2>
+                <h5>Being one of the premier hub of the city, Powai is close proximity with reputed schools, colleges, universities, parks, and hotels.</h5>
                 <ul>
                     <li>Hiranandani business park- 0.5km</li>
                     <li>Hiranandani school- 1km</li>
@@ -161,7 +198,7 @@
     </div>
 </section>
 
-<section id="amenities">
+<section id="amenities" class="bg-light">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -190,7 +227,7 @@
 </section>
 
 
-<section id="price" class="pb-5">
+<section id="price" class="pb-5 bg-light">
     <div class="container">
         <div class="row">
             <div class="col">
