--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--<link rel="stylesheet" href="css/font-awesome.min.css">-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 </head>
 
 
@@ -15,7 +16,7 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
     <div class="container">
         <a href="index.html" class="navbar-brand">
-            <img src="img/mlogo.png" width="50" height="50" alt=""><h3 class="d-inline align-middle">Kanakia</h3>
+            <img src="images/title.png" width="200" height="50" alt=""><h3 class="d-inline align-middle"></h3>
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -33,10 +34,13 @@
                     <a href="#amenities" class="nav-link">Amenities</a>
                 </li>
                 <li class="nav-item">
-                    <a data-toggle="modal" data-target="#myModal" class="nav-link">Price</a>
+                    <a href="#price" class="nav-link">Price</a>
+                </li>
+                <li class="nav-item" style="cursor: pointer">
+                    <a data-toggle="modal" data-target="#myModal" class="nav-link">Broche</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#contact" class="nav-link">88888888</a>
+                    <a href="tel:8888928294" class="nav-link">8888928294</a>
                 </li>
             </ul>
         </div>
@@ -57,14 +61,14 @@
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Modal Heading</h4>
+                    <h4 class="modal-title">Download your copy</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
                 <!-- Modal body -->
                 <div class="modal-body">
                     <form action="">
-                        <input type="text" placeholder="Enter your email">
+                        <input type="text" placeholder="Enter your email" class="form-control">
                         <button class="btn btn-success">Submit</button>
                     </form>
                 </div>
@@ -179,7 +183,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-md-6">
                 <h5>Being one of the premier hub of the city, Powai is close proximity with reputed schools, colleges, universities, parks, and hotels.</h5>
                 <ul>
                     <li>Hiranandani business park- 0.5km</li>
@@ -194,6 +198,9 @@
                     <li>Renaissance Hotel- 4kms</li>
                 </ul>
             </div>
+            <div class="col-md-6">
+                <img src="images/location.png" class="img-fluid" alt="">
+            </div>
         </div>
     </div>
 </section>
@@ -201,26 +208,29 @@
 <section id="amenities" class="bg-light">
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-md-3">
                 <h1>Amenities</h1>
-                <ul>
-                    <li>Aqua Gym</li>
-                    <li>Landscaped Garden areas</li>
-                    <li>Water bodies</li>
-                    <li>Lap pool</li>
-                    <li>Kids pool</li>
-                    <li>Yoga area</li>
-                    <li>Jacuzzi and spa</li>
-                    <li>Fitness centre</li>
-                    <li>ndoor games</li>
-                    <li>Half basketball court</li>
-                    <li>Tennis court</li>
-                    <li>Walking and jogging track</li>
-                    <li>Net cricket</li>
-                    <li>Rock climbing wall</li>
-                    <li>Cafeteria</li>
-                    <li>Multi- purpose hall</li>
-                </ul>
+                    <p>Aqua Gym</p>
+                    <p>Landscaped Garden areas</p>
+                    <p>Water bodies</p>
+                    <p>Lap pool</p>
+                    <p>Kids pool</p>
+                    <p>Yoga area</p>
+                    <p>Jacuzzi and spa</p>
+                    <p>Fitness centre</p>
+            </div>
+            <div class="col-md-3">
+                <p>Indoor game</p>
+                <p>Half basketball court</p>
+                <p>Tennis court</p>
+                <p>Walking and jogging track</p>
+                <p>Net cricket</p>
+                <p>Rock climbing wall</p>
+                <p>Cafeteria</p>
+                <p>Multi- purpose hall</p>
+            </div>
+            <div class="col-md-6">
+                <img src="images/amenities.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
@@ -232,7 +242,32 @@
         <div class="row">
             <div class="col">
                 <h1>Price Area</h1>
-                <p>Neeeds to be done</p>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Configuration</th>
+                        <th scope="col">Carpet area (Sq. ft)</th>
+                        <th scope="col">Price</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">2BHK</th>
+                        <td>700, 720, 740</td>
+                        <td>Rs. 2.2Cr- 2.6Cr All Inclusive.</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3BHK</th>
+                        <td>900, 960</td>
+                        <td>Rs. 3.2Cr- 3.5Cr All Inclusive.</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4BHK</th>
+                        <td>1150, 1200</td>
+                        <td>Rs. 4.2Cr- 4.5Cr All Inclusive.</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -242,39 +277,36 @@
 <section id="contact" class="bg-light py-5">
     <div class="container">
         <div class="row">
-            <div class="col-lg-9">
-                <h3>Get In Touch</h3>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, impedit.</p>
-                <form>
-                    <div class="form-group">
-                        <div class="input-group input-group-lg">
-                            <span class="input-group-addon">
-                                <i class="fa fa-user"></i>
-                            </span>
-                            <input type="text" class="form-control" placeholder="Name">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-group input-group-lg">
-                            <span class="input-group-addon">
-                                <i class="fa fa-envelope"></i>
-                            </span>
-                            <input type="text" class="form-control" placeholder="Email">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-group input-group-lg">
-                            <span class="input-group-addon">
-                                <i class="fa fa-pencil"></i>
-                            </span>
-                            <textarea type="text" class="form-control" placeholder="Message" rows="5"></textarea>
-                        </div>
-                    </div>
-                    <input type="submit" class="btn btn-secondary btn-block btn-block" value="Submit">
-                </form>
+            <div class="col-md-6">
+                <h5>TO CONTACT OUR SALES TEAM</h5>
+                <h5>PLEASE CALL US:</h5>
+
+                <p>Tel: +91 88889 28294</p>
+                <p>Email: sales.kanakiagroup@gmail.com</p>
             </div>
-            <div class="col-lg-3 align-self-center d-lg-block d-none">
-                <img src="img/mlogo.png" alt="" class="img-fluid">
+            <div class="col-md-6">
+                <h4>ALTERNATIVELY YOU CAN FILL</h4>
+                <h4>IN THE FOLLOWING CONTACT FORM:</h4>
+
+                <form action="">
+                    <div class="form-group">
+                        <!--<label>Name</label>-->
+                        <input type="text" class="form-control" placeholder="Enter your name *">
+                    </div>
+                    <div class="form-group">
+                        <!--<label>Enter Number</label>-->
+                        <input type="text" class="form-control" placeholder="Enter your phone number *">
+                    </div>
+                    <div class="form-group">
+                        <!--<label>Enter your email</label>-->
+                        <input type="text" class="form-control" placeholder="Enter your email *">
+                    </div>
+                    <div class="form-group">
+                        <!--<label>Enter Message</label>-->
+                        <input type="text" class="form-control" placeholder="Enter your message">
+                    </div>
+                    <button type="submit" class="btn btn-success">Send</button>
+                </form>
             </div>
         </div>
     </div>
