--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
 <footer id="main-footer" class="py-3 bg-secondary text-white">
     <div class="container">
         <div class="row text-center">
-            <div class="col-md-6 ml-auto">
+            <div class="col-md-12">
+                <p>Disclaimer: The content is for information purpose only and does not constitute an offer to avail of any service. Prices mentioned are subject to change without notice and properties mentioned are subject to availability. Images for representation purpose only. This is not the official website. Website maintained by authorized marketing partner registered under MahaRERA no. A51800013346. We may share data with RERA registered sub brokers/companies/projects for further processing. We may also send updates to the mobile number/email id registered with us. All Rights Reserved.</p>
                 <div class="lead">Copyright &copy; 2018</div>
             </div>
         </div>
